--- a/js.07-24/js基础案例/计算器-02.html
+++ b/js.07-24/js基础案例/计算器-02.html
@@ -29,63 +29,28 @@
 		<input name="method" value="/" type="button" />
 		<br>
 		<hr />
-		<input id="calcu" value="=" type="button" />
+		<buton id="calcu"  >计算</button>
 
 	</body>
 
 </html>
 
 <script>
-	var num1 = 0,num2 = 0;
-	var type = null;
-
-	var nums = document.getElementsByName("num");
-	for(var i = 0; i < nums.length; i++) {
-		nums[i].onclick = function() {
-			if(type == null) {
-				num1 += this.value;
-			} else {
-				num2 += this.value;
-			}
+	
+	var str = "";
+	
+	var elements  = document.getElementsByTagName("input");
+	for( var i = 0 ; i < elements.length ; i++) {
+		elements[i].onclick = function() {
+			str += this.value;
 		}
 	}
-
-	var method = document.getElementsByName("method");
-	for(var i = 0; i < method.length; i++) {
-		method[i].onclick = function() {
-			type = this.value;
-			console.log("type :" + type);
-		}
-	}
-
+	
 	var calcu = document.getElementById("calcu");
 	calcu.onclick = function() {
-
-		var result = document.getElementById("result");
-
-		num1 = parseInt(num1);
-		num2 = parseInt(num2);
-
-		switch(type) {
-			case "+":
-				result.value = num1 + num2;
-				break;
-			case "-":
-				result.value = num1 - num2;
-				break;
-			case "*":
-				result.value = num1 * num2;
-				break;
-			case "/":
-				result.value = num1 / num2;
-				break;
-			default:
-				break;
-		}
-		
-		type = null;
-		num1 =0;
-		num2=0;
-		
+		var result = eval(str);
+		console.log(str);
+		console.log(result)
 	}
+	
 </script>
