字符串 , 循环 , Date

--- a/js.07-24/js.函数/01.html
+++ b/js.07-24/js.函数/01.html
@@ -10,12 +10,18 @@
 
 <script>
 	
-	var a = me(1,1);
-	
-	console.log(a)
-	
-	function me(x , y){
-		return x + y;
+//	var a = me(1,1);
+//	
+//	console.log(a)
+//	
+//	function me(x , y){
+//		return x + y;
+//	}
+	var a = function(){
+		return 1;
 	}
+	var b=a;
+	
+	console.log(b);
 	
 </script>
